--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
+    <form action="friends.html" method="get" id="login-form">
+      <input type="username" placeholder="Email or phone number" />
       <input type="password" placeholder="Password" />
       <input type="submit" value="Log in" />
       <a href="#">Find Kakao Account or Password</a>
